# memserial

./: .gitignore  CMakeLists.txt  README.md
include/: serial_endian.h  serial_exception.h  serial_forward.h  serial_trace.h  serial_version.h  serial_view.h  serialization.h
include/detail/: serial_aggregate.h  serial_array.h  serial_bitset.h  serial_complex.h  serial_default.h  serial_dummy.h  serial_duration.h  serial_hash.h  serial_helpers.h  serial_ident.h  serial_intrinsic.h  serial_iterator.h  serial_metatype.h  serial_nulltype.h  serial_primitive.h  serial_rebind.h  serial_string.h  serial_timepoint.h  serial_trace_impl.h  serial_traits.h  serial_tuple.h  serial_vector.h  serial_version_impl.h  serialization_impl.h
src/: main.cpp  serial_precompile.cpp  serial_version.cpp
